Get rid of name prefix (now unused)
